# NYC-Taxi-Pipeline

./: .gitignore  pyproject.toml
resources/: drawSQL-pgsql-export-2023-09-01.sql
src/nyc_taxi/: conf_manager.py  data_transformation.py  extract_data.py  provision_database.py
